--- a/index.html
+++ b/index.html
@@ -86,13 +86,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       ]
     },
 
-  {
+ {
       "@type": "Product",
       "name": "تأجير كراسي وطاولات",
       "image": "https://www.lamasat.store/images/chairs-tables.jpg",
       "description": "تأجير كراسي وطاولات لجميع المناسبات والحفلات بأسعار مناسبة.",
       "sku": "chairs-001",
+      "mpn": "chairs-001",
+      "gtin13": "1234567890123",
       "brand": { "@type": "Brand", "name": "لمسة" },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.8", "reviewCount": "120" },
       "offers": {
         "@type": "Offer",
         "url": "https://www.lamasat.store/chairs-tables",
@@ -104,17 +107,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "shippingDetails": {
           "@type": "OfferShippingDetails",
           "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
-          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
           "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
         },
         "hasMerchantReturnPolicy": {
           "@type": "MerchantReturnPolicy",
-          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
-          "returnPolicyCountry": "SA",
-          "returnPolicyDays": 7
+          "returnPolicyCategory": "https://schema.org/ReturnByMail",
+          "returnMethod": "https://schema.org/ReturnAtStore",
+          "returnFees": "Free",
+          "applicableCountry": "SA"
         }
-      },
-      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.8", "reviewCount": "120" }
+      }
     },
     {
       "@type": "Product",
@@ -122,7 +124,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "image": "https://www.lamasat.store/images/sofa.jpg",
       "description": "تأجير كنب فاخر للمناسبات والحفلات بأفضل الأسعار.",
       "sku": "sofa-002",
+      "mpn": "sofa-002",
+      "gtin13": "1234567890124",
       "brand": { "@type": "Brand", "name": "لمسة" },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "80" },
       "offers": {
         "@type": "Offer",
         "url": "https://www.lamasat.store/sofa",
@@ -134,17 +139,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "shippingDetails": {
           "@type": "OfferShippingDetails",
           "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
-          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
           "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
         },
         "hasMerchantReturnPolicy": {
           "@type": "MerchantReturnPolicy",
-          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
-          "returnPolicyCountry": "SA",
-          "returnPolicyDays": 7
+          "returnPolicyCategory": "https://schema.org/ReturnByMail",
+          "returnMethod": "https://schema.org/ReturnAtStore",
+          "returnFees": "Free",
+          "applicableCountry": "SA"
         }
-      },
-      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "80" }
+      }
     },
     {
       "@type": "Product",
@@ -152,7 +156,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "image": "https://www.lamasat.store/images/screens.jpg",
       "description": "تأجير شاشات عرض بمقاسات مختلفة مع أنظمة صوت متكاملة.",
       "sku": "screen-003",
+      "mpn": "screen-003",
+      "gtin13": "1234567890125",
       "brand": { "@type": "Brand", "name": "لمسة" },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.7", "reviewCount": "60" },
       "offers": {
         "@type": "Offer",
         "url": "https://www.lamasat.store/screens",
@@ -164,17 +171,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "shippingDetails": {
           "@type": "OfferShippingDetails",
           "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
-          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
           "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
         },
         "hasMerchantReturnPolicy": {
           "@type": "MerchantReturnPolicy",
-          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
-          "returnPolicyCountry": "SA",
-          "returnPolicyDays": 7
+          "returnPolicyCategory": "https://schema.org/ReturnByMail",
+          "returnMethod": "https://schema.org/ReturnAtStore",
+          "returnFees": "Free",
+          "applicableCountry": "SA"
         }
-      },
-      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.7", "reviewCount": "60" }
+      }
     },
     {
       "@type": "Product",
@@ -182,7 +188,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "image": "https://www.lamasat.store/images/sessions.jpg",
       "description": "جلسات شعبية ومغربية للمناسبات بأفضل جودة وأسعار مناسبة.",
       "sku": "session-004",
+      "mpn": "session-004",
+      "gtin13": "1234567890126",
       "brand": { "@type": "Brand", "name": "لمسة" },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "45" },
       "offers": {
         "@type": "Offer",
         "url": "https://www.lamasat.store/sessions",
@@ -194,17 +203,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "shippingDetails": {
           "@type": "OfferShippingDetails",
           "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
-          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
           "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
         },
         "hasMerchantReturnPolicy": {
           "@type": "MerchantReturnPolicy",
-          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
-          "returnPolicyCountry": "SA",
-          "returnPolicyDays": 7
+          "returnPolicyCategory": "https://schema.org/ReturnByMail",
+          "returnMethod": "https://schema.org/ReturnAtStore",
+          "returnFees": "Free",
+          "applicableCountry": "SA"
         }
-      },
-      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "45" }
+      }
     },
     {
       "@type": "Product",
@@ -212,7 +220,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "image": "https://www.lamasat.store/images/speakers.jpg",
       "description": "تأجير سماعات صوت عالية الجودة لجميع المناسبات.",
       "sku": "speaker-005",
+      "mpn": "speaker-005",
+      "gtin13": "1234567890127",
       "brand": { "@type": "Brand", "name": "لمسة" },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.8", "reviewCount": "70" },
       "offers": {
         "@type": "Offer",
         "url": "https://www.lamasat.store/speakers",
@@ -224,25 +235,27 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "shippingDetails": {
           "@type": "OfferShippingDetails",
           "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
-          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
           "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
         },
         "hasMerchantReturnPolicy": {
           "@type": "MerchantReturnPolicy",
-          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
-          "returnPolicyCountry": "SA",
-          "returnPolicyDays": 7
+          "returnPolicyCategory": "https://schema.org/ReturnByMail",
+          "returnMethod": "https://schema.org/ReturnAtStore",
+          "returnFees": "Free",
+          "applicableCountry": "SA"
         }
-      },
-      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.8", "reviewCount": "70" }
+      }
     },
-    {
+   {
       "@type": "Product",
       "name": "خدمة القهوجيين والصبابين",
       "image": "https://www.lamasat.store/images/coffee.jpg",
       "description": "خدمة القهوجيين والصبابين لتقديم القهوة والشاي والمشروبات للمناسبات.",
       "sku": "coffee-006",
+      "mpn": "coffee-006",
+      "gtin13": "1234567890128",
       "brand": { "@type": "Brand", "name": "لمسة" },
+      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "30" },
       "offers": {
         "@type": "Offer",
         "url": "https://www.lamasat.store/coffee",
@@ -254,17 +267,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         "shippingDetails": {
           "@type": "OfferShippingDetails",
           "shippingDestination": { "@type": "DefinedRegion", "addressCountry": "SA" },
-          "shippingRate": { "@type": "MonetaryAmount", "value": "0", "currency": "SAR" },
           "deliveryTime": { "@type": "ShippingDeliveryTime", "handlingTime": "P0D", "transitTime": "P1D" }
         },
         "hasMerchantReturnPolicy": {
           "@type": "MerchantReturnPolicy",
-          "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
-          "returnPolicyCountry": "SA",
-          "returnPolicyDays": 7
+          "returnPolicyCategory": "https://schema.org/ReturnByMail",
+          "returnMethod": "https://schema.org/ReturnAtStore",
+          "returnFees": "Free",
+          "applicableCountry": "SA"
         }
-      },
-      "aggregateRating": { "@type": "AggregateRating", "ratingValue": "4.9", "reviewCount": "30" }
+      }
     }
   ]
 }
