--- a/index.html
+++ b/index.html
@@ -532,9 +532,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </header>
 
 
-  <div style="background:#006c35; color:#fff; text-align:center; padding:10px; font-size:18px; font-weight:bold;">
-  🇸🇦 كل عام ووطننا بخير – اليوم الوطني السعودي
+ <!-- شريط خدمات ثابت -->
+<div style="position: fixed; top: 0; left: 0; width: 100%; background: #006c35; color: #fff; z-index: 9999; padding: 10px 0; font-size: 18px; font-weight: bold; overflow: hidden;">
+  <div style="display: inline-block; white-space: nowrap; animation: scrollText 20s linear infinite;">
+    لمسة لتأجير لوازم الحفلات والمناسبات — تأجير كنب — تأجير مكيفات — تأجير جلسات شعبيه ومغربي — تأجير مكبرات صوت — تأجير خيام — تأجير طاولات وكراسي — تأجير شاشات عرض — تأجير كوش وطاولات استقبال — قهوجيين وصبابين..
+  </div>
 </div>
+
+<style>
+@keyframes scrollText {
+  0% { transform: translateX(100%); }
+  100% { transform: translateX(-100%); }
+}
+</style>
+
+<!-- لإعطاء مساحة للشريط الثابت حتى لا يغطي المحتوى -->
+<div style="height:50px;"></div>
+  
 <h1>تأجير طاولات وكراسي تأجير مكيفات تأجير سماعات تاجير كنب تاجير مستلزمات الحفلات والمناسبات</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
   <!-- زر واتساب -->
