--- a/index.html
+++ b/index.html
@@ -531,10 +531,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </nav>
 </header>
 
-
- <!-- شريط خدمات ثابت -->
-<div style="position: fixed; top: 0; left: 0; width: 100%; background: #006c35; color: #fff; z-index: 9999; padding: 10px 0; font-size: 18px; font-weight: bold; overflow: hidden;">
-  <div style="display: inline-block; white-space: nowrap; animation: scrollText 20s linear infinite;">
+<!-- شريط خدمات ثابت تحت الهيدر -->
+<div style="position: relative; width: 100%; background: #006c35; color: #fff; font-size: 18px; font-weight: bold; overflow: hidden; height: 50px; display:flex; align-items:center;">
+  <div id="scrollText" style="white-space: nowrap; display: inline-block; animation: scrollText 25s linear infinite;">
     لمسة لتأجير لوازم الحفلات والمناسبات — تأجير كنب — تأجير مكيفات — تأجير جلسات شعبيه ومغربي — تأجير مكبرات صوت — تأجير خيام — تأجير طاولات وكراسي — تأجير شاشات عرض — تأجير كوش وطاولات استقبال — قهوجيين وصبابين..
   </div>
 </div>
@@ -544,10 +543,43 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   0% { transform: translateX(100%); }
   100% { transform: translateX(-100%); }
 }
+
+/* لإعطاء مساحة للشريط حتى لا يغطي المحتوى */
+body::before {
+  content:"";
+  display:block;
+  height:50px;
+}
 </style>
 
-<!-- لإعطاء مساحة للشريط الثابت حتى لا يغطي المحتوى -->
-<div style="height:50px;"></div>
+<!-- تأثير احتفالي عند دخول الموقع -->
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<script>
+window.onload = function() {
+  // تساقط سريع للورود/Confetti عند تحميل الصفحة
+  var duration = 3 * 1000;
+  var end = Date.now() + duration;
+
+  (function frame() {
+    confetti({
+      particleCount: 5,
+      angle: 60,
+      spread: 55,
+      origin: { x: 0 }
+    });
+    confetti({
+      particleCount: 5,
+      angle: 120,
+      spread: 55,
+      origin: { x: 1 }
+    });
+
+    if (Date.now() < end) {
+      requestAnimationFrame(frame);
+    }
+  }());
+};
+</script>
   
 <h1>تأجير طاولات وكراسي تأجير مكيفات تأجير سماعات تاجير كنب تاجير مستلزمات الحفلات والمناسبات</h1>
 <div class="contact-buttons" style="text-align: center; margin: 30px 0;">
