--- a/index.html
+++ b/index.html
@@ -533,15 +533,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- شريط خدمات ثابت تحت الهيدر -->
 <div style="position: relative; width: 100%; background: #006c35; color: #fff; font-size: 18px; font-weight: bold; overflow: hidden; height: 50px; display:flex; align-items:center;">
-  <div id="scrollText" style="white-space: nowrap; display: inline-block; animation: scrollText 40s linear infinite;">
+  <div id="scrollText" style="white-space: nowrap; display: inline-block; animation: scrollText 35s linear infinite;">
     لمسة لتأجير لوازم الحفلات والمناسبات — تأجير كنب — تأجير مكيفات — تأجير جلسات شعبيه ومغربي — تأجير مكبرات صوت — تأجير خيام — تأجير طاولات وكراسي — تأجير شاشات عرض — تأجير كوش وطاولات استقبال — قهوجيين وصبابين..
   </div>
 </div>
 
 <style>
 @keyframes scrollText {
-  0% { transform: translateX(-100%); }  /* يبدأ من اليسار خارج الشاشة */
-  100% { transform: translateX(100%); } /* يتحرك لليمين حتى يخرج خارج الشاشة */
+  0% { transform: translateX(-100%); }
+  100% { transform: translateX(100%); }
 }
 
 /* لإعطاء مساحة للشريط حتى لا يغطي المحتوى */
