--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </head>
 <body>
 
- <header>
+<header>
   <div class="logo">حفلات ومناسبات</div>
   <nav>
     <a href="#tables-chairs">تأجير طاولات وكراسي</a>
@@ -533,7 +533,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!-- شريط خدمات ثابت تحت الهيدر -->
 <div style="position: relative; width: 100%; background: #006c35; color: #fff; font-size: 18px; font-weight: bold; overflow: hidden; height: 50px; display:flex; align-items:center;">
-  <div id="scrollText" style="white-space: nowrap; display: inline-block; transform: translateX(-100%);">
+  <div id="scrollText" style="white-space: nowrap; display: inline-block;">
     لمسة لتأجير لوازم الحفلات والمناسبات — تأجير كنب — تأجير مكيفات — تأجير جلسات شعبيه ومغربي — تأجير مكبرات صوت — تأجير خيام — تأجير طاولات وكراسي — تأجير شاشات عرض — تأجير كوش وطاولات استقبال — قهوجيين وصبابين..
   </div>
 </div>
@@ -542,17 +542,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div id="celebrationContainer" style="position: fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; overflow:hidden; z-index:9999;"></div>
 
 <style>
-/* الشريط يمشي من اليسار لليمين ببطء ويرجع بسرعة */
+/* الشريط يمشي من اليسار لليمين ببطء ويرجع بسرعة مباشرة */
 @keyframes scrollText {
-  0% { transform: translateX(-100%); }
-  90% { transform: translateX(100%); }
-  91% { transform: translateX(100%); }
-  100% { transform: translateX(-100%); }
+  0%   { transform: translateX(-100%); }
+  90%  { transform: translateX(100%); }  /* الذهاب ببطء */
+  100% { transform: translateX(-100%); } /* العودة سريعة */
 }
 
 #scrollText {
   animation: scrollText 25s linear infinite;
-  animation-play-state: running;
+  animation-fill-mode: forwards; /* يبدأ مباشرة */
 }
 
 /* مساحة للشريط */
@@ -579,10 +578,7 @@ body::before {
 </style>
 
 <script>
-// تشغيل الشريط فور تحميل الصفحة بدون تأخير
-window.addEventListener('load', () => {
-  document.getElementById('scrollText').style.animationPlayState = 'running';
-});
+// لا حاجة لأي انتظار، الشريط يبدأ مباشرة عند تحميل الصفحة
 
 // توليد رموز الاحتفال عشوائياً
 function createCelebration() {
