--- a/index.html
+++ b/index.html
@@ -534,22 +534,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- شريط خدمات ثابت تحت الهيدر -->
 <div style="position: relative; width: 100%; background: #006c35; color: #fff; font-size: 18px; font-weight: bold; overflow: hidden; height: 50px; display:flex; align-items:center;">
   <div id="scrollText" style="white-space: nowrap; display: inline-block;">
-    لمسة لتأجير لوازم الحفلات والمناسبات — تأجير كنب — تأجير مكيفات — تأجير جلسات شعبيه ومغربي — تأجير مكبرات صوت — تأجير خيام — تأجير طاولات وكراسي — تأجير شاشات عرض — تأجير كوش وطاولات استقبال — قهوجيين وصبابين..
+    <span>
+      لمسة لتأجير لوازم الحفلات والمناسبات — تأجير كنب — تأجير مكيفات — تأجير جلسات شعبيه ومغربي — تأجير مكبرات صوت — تأجير خيام — تأجير طاولات وكراسي — تأجير شاشات عرض — تأجير كوش وطاولات استقبال — قهوجيين وصبابين..&nbsp;&nbsp;
+    </span>
+    <span>
+      لمسة لتأجير لوازم الحفلات والمناسبات — تأجير كنب — تأجير مكيفات — تأجير جلسات شعبيه ومغربي — تأجير مكبرات صوت — تأجير خيام — تأجير طاولات وكراسي — تأجير شاشات عرض — تأجير كوش وطاولات استقبال — قهوجيين وصبابين..&nbsp;&nbsp;
+    </span>
   </div>
 </div>
 
-<!-- حركة الاحتفال تنزل من فوق الموقع -->
-<div id="celebrationContainer" style="position: fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; overflow:hidden; z-index:9999;"></div>
-
 <style>
-/* الشريط يمشي من اليمين لليسار مباشرة وببطء */
+/* الشريط يمشي من اليسار لليمين بشكل مستمر */
 @keyframes scrollText {
-  0%   { transform: translateX(100%); }  /* يبدأ من خارج الشاشة جهة اليمين */
-  100% { transform: translateX(-100%); } /* ينتهي جهة اليسار */
+  0%   { transform: translateX(-50%); }  /* يبدأ من اليسار */
+  100% { transform: translateX(0%); }    /* ينتهي على اليمين */
 }
 
 #scrollText {
-  animation: scrollText 20s linear infinite; /* يبدأ مباشرة عند تحميل الصفحة */
+  display: inline-flex;
+  animation: scrollText 40s linear infinite; /* أبطأ من السابق */
 }
 
 /* مساحة للشريط */
